[package]
name = "flashbots"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-consensus = "0.4.2"
alloy-json-rpc = "0.4.2"
alloy-network = "0.4.2"
alloy-primitives = { version = "0.8.7", features = ["rand"] }
alloy-provider = { version = "0.4.2", features = ["reqwest", "pubsub", "ws", "ipc", "debug-api", "anvil-node", "anvil-api"] }
alloy-rlp = "0.3.8"
alloy-rpc-types = "0.4.2"
alloy-signer = "0.4.2"
alloy-signer-local = "0.4.2"
alloy-transport = "0.4.2"

chrono = "0.4.26"
eyre = "0.6.12"
env_logger = "0.11.1"
tracing = "0.1.40"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["trust-dns", "json"] }
serde = "1.0.203"
serde_json = "1.0.119"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.4.1"

futures-util = "0.3"
futures-core = "0.3"
pin-project = "1"

thiserror = { version = "1.0.37", default-features = false }


